# cifar-10

./: README.md  pyproject.toml
src/: cifar10.ipynb
submission/: model0.csv
