[tool.poetry]
name = "cifar10"
version = "0.1.0"
description = ""
authors = ["Mathieu Marauri <mathieu.marauri@mfglabs.com>"]

[tool.poetry.dependencies]
python = "3.8.0"
matplotlib = "^3.5.2"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
