[tool.poetry]
name = "cifar10"
version = "0.1.0"
description = ""
authors = ["Mathieu Marauri <mathieu.marauri@mfglabs.com>"]

[tool.poetry.dependencies]
python = "3.8.0"
matplotlib = "^3.5.2"
tensorflow = "^2.9.1"
ipykernel = "^6.14.0"
pandas = "^1.4.2"
opencv-python = "^4.6.0"
scikit-learn = "^1.1.1"
visualkeras = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
